--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Jekyll Now
+name: Golden Sweet 
 
 # Short bio or description (displayed in the header)
-description: Create a Jekyll Blog in minutes
+description: YOLO & PASSION
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://user-images.githubusercontent.com/90234175/156673743-3ee783b6-9470-4259-9069-d09527fccec0.png
 
 #
 # Flags below are optional
