--- a/_config.yml
+++ b/_config.yml
@@ -22,11 +22,11 @@ footer-links:
   facebook:
   flickr:
   github: https://github.com/GoldenSweet/
-  instagram:https://www.instagram.com/golden__sweet__/
-  linkedin:www.linkedin.com/in/jintianwu
+  instagram: https://www.instagram.com/golden__sweet__/
+  linkedin: www.linkedin.com/in/jintianwu
   pinterest:
   rss: # just type anything here for a working RSS icon, make sure you set the "url" above!
-  twitter: jekyllrb
+  twitter: 
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
 
